<resources>
    <string name="app_name">FinancialAccount</string>
    <string name="balanceLabel">Баланс</string>
    <string name="settings">Настройки</string>
    <string name="date_label">Дата</string>
    <string name="label_amount">Сумма</string>
    <string name="label_currency">Валюта</string>
    <string name="label_category">Категория</string>
    <string name="label_comment">Комментарий</string>
    <string name="label_save">Сохранить</string>
    <string name="qrcode">QR code</string>
    <string name="income">Доходы</string>
    <string name="expenses">Расходы</string>
    <string name="money_box">Копилка</string>
    <string name="home">Главная</string>
    <string name="statistic">Статистика</string>
    <string name="menu_period_day">День</string>
    <string name="menu_period_week">Неделя</string>
    <string name="menu_period_month">Месяц</string>
    <string name="menu_period_year">Год</string>
    <string name="menu_period_custom">Промежуток</string>
    <string name="menu_period_all">Весь период</string>
    <string name="step_forward">step forward</string>
    <string name="step_back">step back</string>
    <string name="data_picker">Data Picker</string>
</resources>
